Added meeting info to remaining sections endpoints